fix: change parametr in style for scrollbar

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -29,7 +29,7 @@ body {
 
 /* scrollbar for FireFox */
 * {
-  scrollbar-color: $color-dark $color-blue;
+  scrollbar-color: $color-blue $color-dark;
   scrollbar-width: thin;
 }
 
